--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-barcode": "^1.6.1",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
